force-app/main/default/objects/msf_trackings_h__x/msf_trackings_h__x.object-meta.xml
<CustomObject>
    <description>msf_trackings_h</description>
    <externalDataSource>AWS</externalDataSource>
    <externalName>msf_trackings_h</externalName>
    <label>msf_trackings_h</label>
    <pluralLabel>msf_trackings_h</pluralLabel>
</CustomObject>