force-app/main/default/objects/msf_trackings_h__x/fields/activity_date__c.field-meta.xml
<CustomField>
    <fullName>activity_date__c</fullName>
    <description>activity_date</description>
    <externalDeveloperName>activity_date</externalDeveloperName>
    <label>activity_date</label>
    <type>DateTime</type>
</CustomField>