force-app/main/default/objects/msf_trackings_h__x/fields/canal__c.field-meta.xml
<CustomField>
    <fullName>canal__c</fullName>
    <description>canal</description>
    <externalDeveloperName>canal</externalDeveloperName>
    <label>canal</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>