force-app/main/default/objects/msf_trackings_h__x/fields/estado__c.field-meta.xml
<CustomField>
    <fullName>estado__c</fullName>
    <description>estado</description>
    <externalDeveloperName>estado</externalDeveloperName>
    <label>estado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>