force-app/main/default/objects/msf_trackings_h__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>id</description>
    <externalDeveloperName>id</externalDeveloperName>
    <label>id</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>