force-app/main/default/objects/msf_trackings_h__x/fields/id_contacto__c.field-meta.xml
<CustomField>
    <fullName>id_contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>id_contacto</description>
    <externalDeveloperName>id_contacto</externalDeveloperName>
    <label>id_contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tracking Marketing Cloud</relationshipLabel>
    <relationshipName>msf_trackings_h</relationshipName>
    <type>Lookup</type>
</CustomField>