force-app/main/default/objects/msf_trackings_h__x/fields/jobid__c.field-meta.xml
<CustomField>
    <fullName>jobid__c</fullName>
    <description>jobid</description>
    <externalDeveloperName>jobid</externalDeveloperName>
    <label>jobid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>