force-app/main/default/objects/msf_trackings_h__x/fields/journeyname__c.field-meta.xml
<CustomField>
    <fullName>journeyname__c</fullName>
    <description>journeyname</description>
    <externalDeveloperName>journeyname</externalDeveloperName>
    <label>journeyname</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>