force-app/main/default/objects/msf_trackings_h__x/fields/modifieddate__c.field-meta.xml
<CustomField>
    <fullName>modifieddate__c</fullName>
    <description>modifieddate</description>
    <externalDeveloperName>modifieddate</externalDeveloperName>
    <label>modifieddate</label>
    <type>DateTime</type>
</CustomField>